# JINP1

./: .gitignore  CMakeLists.txt  README.md
include/: test_lib.h
source/: main.cc  test_lib.cc
tests/: CMakeLists.txt  CTestTestfile.cmake  main.cc  test_interface.cc
